--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@ git <!DOCTYPE html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="app.css">
-    <title>Mon site</title>
-
+    <title>Shooter</title>
 </head>
 <body>
+    <div class="shooter">
+        <div class="start">Start</div>
+        <div class="score">
+            <sapn class="value">0</sapn>
+            <span class="unit">pts</span>
+        </div>
+        <div class="timer">00:00</div>
+        <div class="targets">
+            <div class="target"></div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
