--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ git <!DOCTYPE html>
     <title>Shooter</title>
 </head>
 <body>
-    <div class="shooter">
+    <div class="shooter step-start">
         <div class="start">Start</div>
         <div class="score">
             <sapn class="value">0</sapn>
