--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@ git <!DOCTYPE html>
             <span class="unit">pts</span>
         </div>
         <div class="timer">00:00</div>
-        <div class="targets">
+        <div class="targets"></div>
+        <div class="best-score">Best score: <span class="value">0</span>pts</div>
            
-        </div>
+        
     </div>
     <script src="script.js"></script>
 </body>
